plugins {
    id("java")
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

apply plugin: 'com.github.johnrengelman.shadow'
apply plugin: 'java'

compileJava {
    sourceCompatibility = '1.8'
    targetCompatibility = '1.8'
}

group = "de.zonlykroks"
version = "1.0-SNAPSHOT"

repositories {
    mavenCentral()
    gradlePluginPortal()
    maven {
        name "henklemax"
        url "https://maven.maxhenkel.de/repository/public"
    }

}

dependencies {
    implementation("org.apache.commons:commons-math3:3.6.1")
    implementation 'org.slf4j:slf4j-api:2.0.13'
    implementation 'org.slf4j:slf4j-simple:2.0.13'
    implementation 'de.maxhenkel.simpleconfig:simple-config:1.0.0-SNAPSHOT'
    implementation 'com.google.code.gson:gson:2.10.1'
}

jar {
    manifest {
        from '/src/main/resources/META-INF/MANIFEST.MF'
    }
}